--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   build_runner: any
   json_annotation: ^4.0.1
   json_serializable: ^4.1.3
+  lint: ^1.5.3
   test: any
 
 # For information on the generic Dart part of this file, see the
