--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cloud_firestore: ^2.2.0
   cupertino_icons: ^1.0.3
   firebase_core: ^1.2.0
+  provider: ^5.0.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
