--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^3.0.0
   cloud_firestore: ^2.2.0
   cupertino_icons: ^1.0.3
   firebase_core: ^1.2.0
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
+  http: ^0.13.3
   provider: ^5.0.0
   uuid: ^3.0.4
 
@@ -33,6 +37,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: any
+  hive_generator: ^1.1.0
   json_annotation: ^4.0.1
   json_serializable: ^4.1.3
   lint: ^1.5.3
@@ -54,6 +59,10 @@ flutter:
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
+  assets:
+    - .env
+    - .env_dev
+  
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
